[gd_scene load_steps=2 format=3 uid="uid://region_tree_castle"]

[ext_resource type="Script" path="res://src/regions/region_tree_castle.gd" id="1_script"]

[node name="RegionTreeCastle" type="Node2D"]
script = ExtResource("1_script")

[node name="BgSprite" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(640, 360)
centered = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 120.0
offset_right = 80.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 32
text = "나무성"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroMessage" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_top = 200.0
offset_right = 280.0
offset_bottom = 300.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.88, 0.9, 0.85, 1)
theme_override_font_sizes/font_size = 18
text = "숲 속의 나무 성채. 전투가 기다린다."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartNormalButton" type="Button" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 320.0
offset_right = 120.0
offset_bottom = 370.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "방어전 시작 (일반)"

[node name="StartHardButton" type="Button" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 385.0
offset_right = 120.0
offset_bottom = 435.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "방어전 시작 (어려움)"

[node name="BackButton" type="Button" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 460.0
offset_right = 100.0
offset_bottom = 510.0
grow_horizontal = 2
text = "돌아가기"
